# parallel_cw2

./: CMakeLists.txt  main.c
